[gd_scene load_steps=3 format=3 uid="uid://dm8myqlofxq2m"]

[ext_resource type="Script" path="res://Script/menu.gd" id="1_55fia"]
[ext_resource type="PackedScene" uid="uid://423ij2iv8x7j" path="res://Scene/AnimalSets.tscn" id="2_ltkgi"]

[node name="Node2D" type="Node2D"]
z_index = 2
position = Vector2(273, 647)
script = ExtResource("1_55fia")

[node name="GameOver" type="ColorRect" parent="."]
visible = false
offset_left = -269.0
offset_top = -638.0
offset_right = 500.0
offset_bottom = 679.0
color = Color(0.321569, 0.321569, 0.321569, 0.85098)

[node name="GameOverLabel" type="RichTextLabel" parent="GameOver"]
layout_mode = 0
offset_left = 229.0
offset_top = 401.0
offset_right = 542.0
offset_bottom = 479.0
theme_override_font_sizes/normal_font_size = 50
text = "Game Over"

[node name="YourScore" type="RichTextLabel" parent="GameOver"]
layout_mode = 0
offset_left = 225.0
offset_top = 489.0
offset_right = 526.0
offset_bottom = 611.0
theme_override_font_sizes/normal_font_size = 25
text = "Your score: "

[node name="Restart" type="Button" parent="GameOver"]
layout_mode = 0
offset_left = 200.0
offset_top = 638.0
offset_right = 361.0
offset_bottom = 702.0
theme_override_font_sizes/font_size = 25
text = "Try again"

[node name="End" type="Button" parent="GameOver"]
layout_mode = 0
offset_left = 402.0
offset_top = 638.0
offset_right = 608.0
offset_bottom = 702.0
theme_override_font_sizes/font_size = 25
text = "Enough for now"

[node name="Settings" type="ColorRect" parent="."]
offset_left = -268.0
offset_top = -644.0
offset_right = 450.0
offset_bottom = 629.0
color = Color(0.321569, 0.372549, 0.321569, 1)

[node name="SettingsLabel" type="RichTextLabel" parent="Settings"]
layout_mode = 0
offset_left = 249.0
offset_top = 257.0
offset_right = 562.0
offset_bottom = 333.0
theme_override_font_sizes/normal_font_size = 50
text = "Settings"

[node name="TabBar" type="TabBar" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00381606
offset_left = 94.7399
offset_top = 362.0
offset_right = 711.26
offset_bottom = 427.0
theme_override_font_sizes/font_size = 30
current_tab = 1
tab_count = 2
tab_0/title = "Vomule"
tab_1/title = "Character Sets"
metadata/_edit_use_anchors_ = true

[node name="Node" type="Node2D" parent="Settings"]

[node name="Volume" type="HSlider" parent="Settings/Node"]
z_index = 2
offset_left = 259.0
offset_top = 692.0
offset_right = 472.0
offset_bottom = 728.0
max_value = 1.0
step = 0.01
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Settings/Node"]
z_index = 2
offset_left = 255.0
offset_top = 641.0
offset_right = 456.0
offset_bottom = 696.0
theme_override_font_sizes/font_size = 30
text = "Volume: 50%"
metadata/_edit_use_anchors_ = true

[node name="VolumeSFX" type="HSlider" parent="Settings/Node"]
z_index = 2
offset_left = 257.0
offset_top = 827.0
offset_right = 470.0
offset_bottom = 863.0
max_value = 1.0
step = 0.01
metadata/_edit_use_anchors_ = true

[node name="LabelSFX" type="Label" parent="Settings/Node"]
z_index = 2
offset_left = 253.0
offset_top = 777.0
offset_right = 498.0
offset_bottom = 832.0
theme_override_font_sizes/font_size = 30
text = "SFX Volume: 50%"
metadata/_edit_use_anchors_ = true

[node name="CanvasGroup" parent="Settings" instance=ExtResource("2_ltkgi")]
z_index = 3
position = Vector2(54, 463)

[node name="Button" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0130039
anchor_top = 0.214123
anchor_right = 0.0130039
anchor_bottom = 0.214123
offset_left = 131.0
offset_top = 844.0
offset_right = 316.0
offset_bottom = 918.0
theme_override_font_sizes/font_size = 25
text = "Back"
metadata/_edit_use_anchors_ = true

[node name="End" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0130039
anchor_top = 0.214123
anchor_right = 0.0130039
anchor_bottom = 0.214123
offset_left = 405.0
offset_top = 838.0
offset_right = 621.0
offset_bottom = 917.0
theme_override_font_sizes/font_size = 25
text = "Enough for now"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="GameOver/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GameOver/End" to="." method="_on_end_pressed"]
[connection signal="tab_changed" from="Settings/TabBar" to="." method="_on_tab_bar_tab_changed"]
[connection signal="value_changed" from="Settings/Node/Volume" to="." method="_on_volume_value_changed"]
[connection signal="value_changed" from="Settings/Node/VolumeSFX" to="." method="_on_volume_sfx_value_changed"]
[connection signal="pressed" from="Settings/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Settings/End" to="." method="_on_end_pressed"]
